<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboguard_odrive</name>
  <version>0.0.0</version>
  <description>Low level control of ODrives</description>
  <maintainer email="capra@ens.etsmtl.ca">Capra</maintainer>
  <license>MIT</license>

  <build_depend>rclpy</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python3</build_depend>
  <build_depend>python3-pip</build_depend>
  <build_depend>python-can</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
